--- a/index.html
+++ b/index.html
@@ -20,12 +20,33 @@
             </ul>
         </nav>
     </header>
-    <section class="banner">
+    <section class="banner" id="home">
         <img src="κξξξ.png" alt="Banner Image">
     </section>
-    <section class="content">
+    <section class="content" id="about">
         <h1>Welcome to PoligonOwl</h1>
         <p>Your creative partner in graphic design. Let us bring your ideas to life with stunning visuals and innovative designs.</p>
+    </section>
+    <section class="content services" id="services">
+        <h2>Our Services</h2>
+        <p>At PoligonOwl Graphic Design Studio, we offer a range of services to cater to your creative needs:</p>
+        <ul>
+            <li>Logo Design</li>
+            <li>Brand Identity</li>
+            <li>Print Design (Brochures, Flyers, Business Cards)</li>
+            <li>Web Design</li>
+            <li>Social Media Graphics</li>
+            <li>Illustrations</li>
+        </ul>
+    </section>
+    <section class="content" id="portfolio">
+        <h2>Our Portfolio</h2>
+        <p>Check out some of our latest projects and see how we bring ideas to life with our designs.</p>
+    </section>
+    <section class="content contact" id="contact">
+        <h2>Contact Us</h2>
+        <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
     </section>
     <footer>
         <p>&copy; 2024 PoligonOwl Graphic Design Studio. All rights reserved.</p>
