--- a/index.html
+++ b/index.html
@@ -22,29 +22,36 @@
     </header>
     <section class="banner" id="home">
         <img src="κξξξ.png" alt="Banner Image">
+        <div class="welcome-message">
+            <h1>Welcome to PoligonOwl Graphic Design Studio!</h1>
+            <p>We are a creative team dedicated to bringing your vision to life through innovative design. From branding to digital illustrations, we deliver exceptional results that tell your unique story. Let's create something beautiful together.</p>
+        </div>
     </section>
     <section class="content" id="about">
         <h1>Welcome to PoligonOwl</h1>
         <p>Your creative partner in graphic design. Let us bring your ideas to life with stunning visuals and innovative designs.</p>
     </section>
     <section class="content services" id="services">
-        <h2>Our Services</h2>
-        <p>At PoligonOwl Graphic Design Studio, we offer a range of services to cater to your creative needs:</p>
-        <ul>
-            <li>Logo Design</li>
-            <li>Brand Identity</li>
-            <li>Print Design (Brochures, Flyers, Business Cards)</li>
-            <li>Web Design</li>
-            <li>Social Media Graphics</li>
-            <li>Illustrations</li>
-        </ul>
+        <h1>Our Services</h1>
+        <div class="services-list">
+            <h2>Branding & Logo Design</h2>
+            <p>Establish a strong identity with captivating logos and brand assets.</p>
+            <h2>Digital Illustrations</h2>
+            <p>Bring your ideas to life with stunning digital illustrations tailored to your needs.</p>
+            <h2>Print Media Design</h2>
+            <p>From business cards to brochures, we design print materials that make an impact.</p>
+            <h2>Social Media Graphics</h2>
+            <p>Elevate your social media presence with eye-catching graphics and designs optimized for various platforms.</p>
+            <h2>Flyer Design</h2>
+            <p>Spread your message effectively with professionally crafted flyers designed to capture attention and drive engagement.</p>
+        </div>
     </section>
     <section class="content" id="portfolio">
-        <h2>Our Portfolio</h2>
-        <p>Check out some of our latest projects and see how we bring ideas to life with our designs.</p>
+        <h1>Our Portfolio</h1>
+        <p>Check out some of our latest projects on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a> and see how we bring ideas to life with our designs.</p>
     </section>
     <section class="content contact" id="contact">
-        <h2>Contact Us</h2>
+        <h1>Contact Us</h1>
         <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
         <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
     </section>
