--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>Spread your message effectively with professionally crafted flyers designed to capture attention and drive engagement.</p>
         </div>
     </section>
-    <section class="content" id="portfolio">
+    <section class="content portfolio" id="portfolio">
         <h1>Our Portfolio</h1>
         <p>Check out some of our latest projects on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a> and see how we bring ideas to life with our designs.</p>
     </section>
