--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PoligonOwl Studio</title>
+    <title>PoligonOwl Graphic Design Studio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,45 +13,57 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-
-    <div class="welcome-panel">
-        <h1>Welcome to PoligonOwl Studio</h1>
-        <p>We are a creative graphic design studio dedicated to bringing your ideas to life through stunning visuals.</p>
-    </div>
-
-    <div class="banner">
-        <img src="κξξξ.png" alt="Banner Image">
-    </div>
-    
-    <div class="services">
-        <h2>Our Services</h2>
-        <ul>
-            <li>Logo Design</li>
-            <li>Brand Identity</li>
-            <li>Print Design (Brochures, Flyers, Business Cards)</li>
-            <li>Social Media Graphics</li>
-            <li>Illustrations</li>
-            <!-- Add more services here -->
-        </ul>
-    </div>
-    
-    <div class="portfolio-panel">
-        <h2>Portfolio</h2>
-        <p>Explore more of our work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
-    </div>
-
-    <footer>
-        <div class="contact">
-            <p>Contact us:</p>
-            <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
-            <p>Instagram: <a href="https://instagram.com/sneit_art">@sneit_art</a></p>
+    <section id="welcome">
+        <div class="welcome-text">
+            <h1>Welcome to PoligonOwl Studio</h1>
+            <p>We are a creative graphic design studio dedicated to providing unique and innovative design solutions.</p>
         </div>
+    </section>
+    <section id="about">
+        <div class="about-text">
+            <h2>About Us</h2>
+            <p>Add your text here describing your studio and your approach to graphic design.</p>
+        </div>
+    </section>
+    <section id="services" class="services-section">
+        <div class="services-background">
+            <!-- Background image for services section -->
+            <img src="efeggg.png" alt="Services Background">
+        </div>
+        <div class="services-text">
+            <h2>Our Services</h2>
+            <p>We offer a wide range of services including:</p>
+            <ul>
+                <li>Logo Design</li>
+                <li>Brand Design</li>
+                <li>Print Design (Brochures, Flyers, Business Cards)</li>
+                <li>Social Media Graphics</li>
+                <li>Illustrations</li>
+            </ul>
+        </div>
+    </section>
+    <section id="portfolio">
+        <div class="portfolio-text">
+            <h2>Portfolio</h2>
+            <p>Check out our portfolio on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="contact-text">
+            <h2>Contact Us</h2>
+            <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
+            <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
+        </div>
+    </section>
+    <footer>
+        <p>&copy; 2024 PoligonOwl Studio. All rights reserved.</p>
     </footer>
 </body>
 </html>
