--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
     <section id="contact" class="contact">
         <div class="contact-info">
             <h2>Contact Us</h2>
-            <p>Email: sneit95@hotmail.gr</p>
-            <p>Instagram: <a href="https://www.instagram.com/sneit_art/">@sneit_art</a></p>
+            <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
+            <p>Instagram: <a href="https://www.instagram.com/sneit_art/" target="_blank">@sneit_art</a></p>
         </div>
     </section>
     
+    <footer>
+        <p>&copy; 2024 PoligonOwl - All Rights Reserved</p>
+    </footer>
 </body>
 </html>
