--- a/index.html
+++ b/index.html
@@ -56,9 +56,4 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
-    </footer>
-
-    <script src="scripts.js"></script>
-</body>
-</html>
+        <p>&copy; 2024 Pol
