--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     </section>
 
     <section id="services" class="services-section">
-        <img src="efeggg.png" alt="Services Background" class="services-bg">
         <div class="services-content">
             <h2>Our Services</h2>
             <p>At PoligonOwl, we offer a wide range of graphic design services to meet your needs:</p>
@@ -56,4 +55,9 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Pol
+        <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
+    </footer>
+
+    <script src="scripts.js"></script>
+</body>
+</html>
