--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
             <ul>
                 <li><a href="#welcome">Welcome</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="welcome" class="welcome-section">
-        <img src="κξξξ.png" alt="Banner" class="banner">
+        <div class="banner-container">
+            <img src="κξξξ.png" alt="Banner" class="banner">
+        </div>
         <div class="welcome-text">
             <h1>Welcome to PoligonOwl</h1>
             <p>Your go-to studio for all graphic design needs. We bring your ideas to life with creativity and precision.</p>
