--- a/index.html
+++ b/index.html
@@ -4,77 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PoligonOwl - Graphic Design Studio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="bg-light py-3 fixed-top">
-        <div class="container d-flex justify-content-between align-items-center">
-            <img src="fwww.png" alt="PoligonOwl Logo" class="logo">
-            <nav>
-                <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="#welcome">Welcome</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header>
+        <img src="fwww.png" alt="PoligonOwl Logo" class="logo">
+        <nav>
+            <ul>
+                <li><a href="#welcome">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <section id="welcome" class="welcome-section" data-aos="fade-in">
-        <div class="banner-container">
-            <img src="κξξξ.png" alt="Banner" class="banner">
+    <section id="welcome" class="welcome">
+        <div class="banner">
+            <img src="κξξξ.png" alt="Banner">
         </div>
         <div class="welcome-text">
             <h1>Welcome to PoligonOwl</h1>
-            <p>Your go-to studio for all graphic design needs. We bring your ideas to life with creativity and precision.</p>
+            <p>Your one-stop solution for all your graphic design needs.</p>
         </div>
     </section>
 
-    <section id="services" class="services-section" data-aos="fade-up">
-        <div class="container">
-            <div class="services-content">
-                <h2>Our Services</h2>
-                <p>At PoligonOwl, we offer a wide range of graphic design services to meet your needs:</p>
-                <ul>
-                    <li>Logo Design</li>
-                    <li>Brand Identity</li>
-                    <li>Print Design (Brochures, Flyers, Business Cards)</li>
-                    <li>Social Media Graphics</li>
-                    <li>Illustrations</li>
-                </ul>
-            </div>
+    <section id="services" class="services">
+        <div class="background">
+            <img src="efeggg.png" alt="Services Background">
+        </div>
+        <div class="services-text">
+            <h2>Our Services</h2>
+            <ul>
+                <li>Logo Design</li>
+                <li>Branding</li>
+                <li>Print Design (Brochures, Flyers, Business Cards)</li>
+                <li>Social Media Graphics</li>
+                <li>Illustrations</li>
+            </ul>
         </div>
     </section>
 
-    <section id="portfolio" class="portfolio-section" data-aos="fade-up">
-        <div class="container">
-            <h2>Portfolio</h2>
-            <p>Check out our work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
-        </div>
+    <section id="portfolio" class="portfolio">
+        <h2>Our Portfolio</h2>
+        <p>Check out our work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
     </section>
 
-    <section id="contact" class="contact-section" data-aos="fade-up">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
-            <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
-        </div>
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
     </section>
 
-    <footer class="bg-light py-3">
-        <div class="container text-center">
-            <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
-        </div>
+    <footer>
+        <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
