--- a/index.html
+++ b/index.html
@@ -5,25 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PoligonOwl - Graphic Design Studio</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
-        <img src="fwww.png" alt="PoligonOwl Logo" class="logo">
-        <nav>
-            <ul>
-                <li><a href="#welcome">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <img src="fwww.png" alt="PoligonOwl Logo" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="#welcome">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section id="welcome" class="welcome">
         <div class="banner">
             <img src="κξξξ.png" alt="Banner">
         </div>
-        <div class="welcome-text">
+        <div class="welcome-text container">
             <h1>Welcome to PoligonOwl</h1>
             <p>Your one-stop solution for all your graphic design needs.</p>
         </div>
@@ -33,7 +36,7 @@
         <div class="background">
             <img src="efeggg.png" alt="Services Background">
         </div>
-        <div class="services-text">
+        <div class="services-text container">
             <h2>Our Services</h2>
             <ul>
                 <li>Logo Design</li>
@@ -46,20 +49,24 @@
     </section>
 
     <section id="portfolio" class="portfolio">
-        <h2>Our Portfolio</h2>
-        <p>Check out our work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
+        <div class="container">
+            <h2>Our Portfolio</h2>
+            <p>Check out our work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
+        </div>
     </section>
 
     <section id="contact" class="contact">
-        <h2>Contact Us</h2>
-        <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
-        <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
+            <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
+        </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
+        </div>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
