--- a/index.html
+++ b/index.html
@@ -5,68 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PoligonOwl - Graphic Design Studio</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
-        <div class="container">
-            <img src="fwww.png" alt="PoligonOwl Logo" class="logo">
-            <nav>
-                <ul>
-                    <li><a href="#welcome">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+        <img src="fwww.png" alt="PoligonOwl Logo" id="logo">
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <section id="welcome" class="welcome">
+    
+    <section id="home">
         <div class="banner">
-            <img src="κξξξ.png" alt="Banner">
+            <img src="κξξξ.png" alt="PoligonOwl Banner">
         </div>
-        <div class="welcome-text container">
+        <div class="welcome">
             <h1>Welcome to PoligonOwl</h1>
-            <p>Your one-stop solution for all your graphic design needs.</p>
+            <p>We are a creative graphic design studio dedicated to bringing your vision to life. Explore our services and portfolio to see how we can help your brand stand out.</p>
         </div>
     </section>
 
-    <section id="services" class="services">
+    <section id="services">
         <div class="background">
             <img src="efeggg.png" alt="Services Background">
         </div>
-        <div class="services-text container">
-            <h2>Our Services</h2>
-            <ul>
-                <li>Logo Design</li>
-                <li>Branding</li>
-                <li>Print Design (Brochures, Flyers, Business Cards)</li>
-                <li>Social Media Graphics</li>
-                <li>Illustrations</li>
-            </ul>
-        </div>
-    </section>
-
-    <section id="portfolio" class="portfolio">
-        <div class="container">
+        <h2>Our Services</h2>
+        <p>We offer a range of graphic design services to meet your needs:</p>
+        <ul>
+            <li>Logo Design</li>
+            <li>Branding</li>
+            <li>Print Design (Brochures, Flyers, Business Cards)</li>
+            <li>Social Media Graphics</li>
+            <li>Illustrations</li>
+        </ul>
+        <div class="portfolio">
             <h2>Our Portfolio</h2>
-            <p>Check out our work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
+            <a href="https://www.artstation.com/sneit" target="_blank">View our work on ArtStation</a>
         </div>
     </section>
 
-    <section id="contact" class="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
-            <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
-        </div>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
+        <p>Instagram: <a href="https://instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
     </section>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
-        </div>
+        <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
