--- a/index.html
+++ b/index.html
@@ -8,55 +8,57 @@
 </head>
 <body>
     <header>
-        <img src="fwww.png" alt="PoligonOwl Logo" id="logo">
+        <img src="fwww.png" alt="PoligonOwl Logo" class="logo">
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#welcome">Welcome</a></li>
                 <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     
-    <section id="home">
-        <div class="banner">
-            <img src="κξξξ.png" alt="PoligonOwl Banner">
-        </div>
-        <div class="welcome">
+    <section id="welcome" class="welcome">
+        <img src="κξξξ.png" alt="Welcome Banner" class="banner">
+        <div class="welcome-text">
             <h1>Welcome to PoligonOwl</h1>
-            <p>We are a creative graphic design studio dedicated to bringing your vision to life. Explore our services and portfolio to see how we can help your brand stand out.</p>
+            <p>We are a professional graphic design studio dedicated to bringing your vision to life with creativity and precision.</p>
         </div>
     </section>
 
-    <section id="services">
-        <div class="background">
+    <section id="services" class="services">
+        <div class="services-background">
             <img src="efeggg.png" alt="Services Background">
         </div>
-        <h2>Our Services</h2>
-        <p>We offer a range of graphic design services to meet your needs:</p>
-        <ul>
-            <li>Logo Design</li>
-            <li>Branding</li>
-            <li>Print Design (Brochures, Flyers, Business Cards)</li>
-            <li>Social Media Graphics</li>
-            <li>Illustrations</li>
-        </ul>
-        <div class="portfolio">
-            <h2>Our Portfolio</h2>
-            <a href="https://www.artstation.com/sneit" target="_blank">View our work on ArtStation</a>
+        <div class="services-content">
+            <h2>Our Services</h2>
+            <p>At PoligonOwl, we offer a wide range of graphic design services to cater to your needs:</p>
+            <ul>
+                <li>Logo Design</li>
+                <li>Brand Identity</li>
+                <li>Print Design (Brochures, Flyers, Business Cards)</li>
+                <li>Social Media Graphics</li>
+                <li>Illustrations</li>
+            </ul>
         </div>
     </section>
 
-    <section id="contact">
+    <section id="portfolio" class="portfolio">
+        <h2>Our Portfolio</h2>
+        <a href="https://www.artstation.com/sneit" target="_blank" class="portfolio-link">View our work on ArtStation</a>
+    </section>
+
+    <section id="contact" class="contact">
         <h2>Contact Us</h2>
         <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
-        <p>Instagram: <a href="https://instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
     </section>
 
     <footer>
-        <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
+        <p>&copy; 2024 PoligonOwl. All Rights Reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
