--- a/index.html
+++ b/index.html
@@ -8,56 +8,53 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <img src="fwww.png" alt="PoligonOwl Logo" class="logo">
-            <nav>
-                <ul>
-                    <li><a href="#welcome">Welcome</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    
-    <section id="welcome" class="welcome">
-        <img src="κξξξ.png" alt="Welcome Banner" class="banner">
-        <div class="welcome-text">
-            <h1>Welcome to PoligonOwl</h1>
-            <p>We are a professional graphic design studio dedicated to bringing your vision to life with creativity and precision.</p>
-        </div>
-    </section>
-
-    <section id="services" class="services">
-        <div class="services-content">
-            <h2>Our Services</h2>
-            <p>At PoligonOwl, we offer a wide range of graphic design services to cater to your needs:</p>
+        <img src="fwww.png" alt="PoligonOwl Logo" class="logo">
+        <nav>
             <ul>
-                <li>Logo Design</li>
-                <li>Brand Identity</li>
-                <li>Print Design (Brochures, Flyers, Business Cards)</li>
-                <li>Social Media Graphics</li>
-                <li>Illustrations</li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
+        </nav>
+    </header>
+    <section id="banner">
+        <img src="κξξξ.png" alt="PoligonOwl Banner">
+    </section>
+    <section id="home" class="background1">
+        <h1>Welcome to PoligonOwl</h1>
+        <p>Your creative partner in graphic design.</p>
+    </section>
+    <section id="about" class="background2">
+        <h2>About Us</h2>
+        <p>PoligonOwl is a premier graphic design studio dedicated to bringing your vision to life.</p>
+    </section>
+    <section id="services" class="background1">
+        <h2>Our Services</h2>
+        <ul>
+            <li>Logo Design</li>
+            <li>Brand Identity</li>
+            <li>Web Design</li>
+            <li>Print Design</li>
+        </ul>
+    </section>
+    <section id="portfolio" class="background2">
+        <h2>Portfolio</h2>
+        <div class="portfolio-grid">
+            <div class="portfolio-item"><img src="portfolio1.png" alt="Portfolio Item 1"></div>
+            <div class="portfolio-item"><img src="portfolio2.png" alt="Portfolio Item 2"></div>
+            <div class="portfolio-item"><img src="portfolio3.png" alt="Portfolio Item 3"></div>
+            <!-- Add more portfolio items as needed -->
         </div>
     </section>
-
-    <section id="portfolio" class="portfolio">
-        <h2>Our Portfolio</h2>
-        <a href="https://www.artstation.com/sneit" target="_blank" class="portfolio-link">View our work on ArtStation</a>
-    </section>
-
-    <section id="contact" class="contact">
+    <section id="contact" class="background1">
         <h2>Contact Us</h2>
-        <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
-        <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
+        <p>Email: contact@poligonowl.com</p>
     </section>
-
     <footer>
-        <p>&copy; 2024 PoligonOwl. All Rights Reserved.</p>
+        <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
     </footer>
-
     <script src="scripts.js"></script>
 </body>
 </html>
