--- a/index.html
+++ b/index.html
@@ -8,53 +8,38 @@
 </head>
 <body>
     <header>
-        <img src="fwww.png" alt="PoligonOwl Logo" class="logo">
+        <div class="logo">
+            <img src="fwww.png" alt="PoligonOwl Logo">
+        </div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <section id="banner">
-        <img src="κξξξ.png" alt="PoligonOwl Banner">
-    </section>
-    <section id="home" class="background1">
-        <h1>Welcome to PoligonOwl</h1>
-        <p>Your creative partner in graphic design.</p>
-    </section>
-    <section id="about" class="background2">
-        <h2>About Us</h2>
-        <p>PoligonOwl is a premier graphic design studio dedicated to bringing your vision to life.</p>
-    </section>
-    <section id="services" class="background1">
-        <h2>Our Services</h2>
-        <ul>
-            <li>Logo Design</li>
-            <li>Brand Identity</li>
-            <li>Web Design</li>
-            <li>Print Design</li>
-        </ul>
-    </section>
-    <section id="portfolio" class="background2">
-        <h2>Portfolio</h2>
-        <div class="portfolio-grid">
-            <div class="portfolio-item"><img src="portfolio1.png" alt="Portfolio Item 1"></div>
-            <div class="portfolio-item"><img src="portfolio2.png" alt="Portfolio Item 2"></div>
-            <div class="portfolio-item"><img src="portfolio3.png" alt="Portfolio Item 3"></div>
-            <!-- Add more portfolio items as needed -->
-        </div>
-    </section>
-    <section id="contact" class="background1">
-        <h2>Contact Us</h2>
-        <p>Email: contact@poligonowl.com</p>
-    </section>
+    <main>
+        <section id="home" class="banner">
+            <img src="κξξξ.png" alt="Banner">
+        </section>
+        <section id="portfolio">
+            <h2>Portfolio</h2>
+            <p>Check out my work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
+        </section>
+        <section id="about" class="background">
+            <h2>About Me</h2>
+            <p>Welcome to PoligonOwl! I am Sneit, a passionate graphic designer. Follow me on <a href="https://instagram.com/sneit_art" target="_blank">Instagram</a>.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email me at: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
     </footer>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
