--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     </header>
     <main>
         <section id="home" class="banner">
-            <img src="κξξξ.png" alt="Banner">
+            <div class="slider">
+                <img src="κξξξ.png" alt="Banner 1">
+                <img src="efeggg.png" alt="Banner 2" class="hidden">
+            </div>
         </section>
         <section id="portfolio">
             <h2>Portfolio</h2>
