--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PoligonOwl - Graphic Design Studio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -29,9 +30,12 @@
         </section>
         <section id="portfolio">
             <h2>Portfolio</h2>
-            <p>Check out my work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
+            <div class="portfolio-content">
+                <p>Check out my work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
+                <a href="https://www.artstation.com/sneit" target="_blank" class="btn">View Portfolio</a>
+            </div>
         </section>
-        <section id="about" class="background">
+        <section id="about">
             <h2>About Me</h2>
             <p>Welcome to PoligonOwl! I am Sneit, a passionate graphic designer. Follow me on <a href="https://instagram.com/sneit_art" target="_blank">Instagram</a>.</p>
         </section>
