--- a/index.html
+++ b/index.html
@@ -6,47 +6,59 @@
     <title>PoligonOwl - Graphic Design Studio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="fwww.png" alt="PoligonOwl Logo">
-        </div>
+        <img src="fwww.png" alt="PoligonOwl Logo" class="logo">
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#welcome">Welcome</a></li>
+                <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section id="home" class="banner">
-            <div class="slider">
-                <img src="κξξξ.png" alt="Banner 1">
-                <img src="efeggg.png" alt="Banner 2" class="hidden">
-            </div>
-        </section>
-        <section id="portfolio">
-            <h2>Portfolio</h2>
-            <div class="portfolio-content">
-                <p>Check out my work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
-                <a href="https://www.artstation.com/sneit" target="_blank" class="btn">View Portfolio</a>
-            </div>
-        </section>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Welcome to PoligonOwl! I am Sneit, a passionate graphic designer. Follow me on <a href="https://instagram.com/sneit_art" target="_blank">Instagram</a>.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Email me at: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
-        </section>
-    </main>
+
+    <section id="welcome" class="welcome-section">
+        <img src="κξξξ.png" alt="Banner" class="banner">
+        <div class="welcome-text">
+            <h1>Welcome to PoligonOwl</h1>
+            <p>Your go-to studio for all graphic design needs. We bring your ideas to life with creativity and precision.</p>
+        </div>
+    </section>
+
+    <section id="services" class="services-section">
+        <img src="efeggg.png" alt="Services Background" class="services-bg">
+        <div class="services-content">
+            <h2>Our Services</h2>
+            <p>At PoligonOwl, we offer a wide range of graphic design services to meet your needs:</p>
+            <ul>
+                <li>Logo Design</li>
+                <li>Brand Identity</li>
+                <li>Print Design (Brochures, Flyers, Business Cards)</li>
+                <li>Social Media Graphics</li>
+                <li>Illustrations</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="portfolio" class="portfolio-section">
+        <h2>Portfolio</h2>
+        <p>Check out our work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
+    </section>
+
+    <section id="contact" class="contact-section">
+        <h2>Contact Us</h2>
+        <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
+    </section>
+
     <footer>
         <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
