--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="PoligonOwl - Your go-to studio for all graphic design needs. We bring your ideas to life with creativity and precision.">
     <title>PoligonOwl - Graphic Design Studio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -21,39 +22,41 @@
         </nav>
     </header>
 
-    <section id="welcome" class="welcome-section">
-        <img src="κξξξ.png" alt="Banner" class="banner">
-        <div class="welcome-text">
-            <h1>Welcome to PoligonOwl</h1>
-            <p>Your go-to studio for all graphic design needs. We bring your ideas to life with creativity and precision.</p>
-        </div>
-    </section>
+    <main>
+        <section id="welcome" class="welcome-section">
+            <img src="κξξξ.png" alt="Graphic Design Banner" class="banner">
+            <div class="welcome-text">
+                <h1>Welcome to PoligonOwl</h1>
+                <p>Your go-to studio for all graphic design needs. We bring your ideas to life with creativity and precision.</p>
+            </div>
+        </section>
 
-    <section id="services" class="services-section">
-        <img src="efeggg.png" alt="Services Background" class="services-bg">
-        <div class="services-content">
-            <h2>Our Services</h2>
-            <p>At PoligonOwl, we offer a wide range of graphic design services to meet your needs:</p>
-            <ul>
-                <li>Logo Design</li>
-                <li>Brand Identity</li>
-                <li>Print Design (Brochures, Flyers, Business Cards)</li>
-                <li>Social Media Graphics</li>
-                <li>Illustrations</li>
-            </ul>
-        </div>
-    </section>
+        <section id="services" class="services-section">
+            <img src="efeggg.png" alt="Services Background" class="services-bg">
+            <div class="services-content">
+                <h2>Our Services</h2>
+                <p>At PoligonOwl, we offer a wide range of graphic design services to meet your needs:</p>
+                <ul>
+                    <li>Logo Design</li>
+                    <li>Brand Identity</li>
+                    <li>Print Design (Brochures, Flyers, Business Cards)</li>
+                    <li>Social Media Graphics</li>
+                    <li>Illustrations</li>
+                </ul>
+            </div>
+        </section>
 
-    <section id="portfolio" class="portfolio-section">
-        <h2>Portfolio</h2>
-        <p>Check out our work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
-    </section>
+        <section id="portfolio" class="portfolio-section">
+            <h2>Portfolio</h2>
+            <p>Check out our work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
+        </section>
 
-    <section id="contact" class="contact-section">
-        <h2>Contact Us</h2>
-        <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
-        <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
-    </section>
+        <section id="contact" class="contact-section">
+            <h2>Contact Us</h2>
+            <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
+            <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2024 PoligonOwl. All rights reserved.</p>
