--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <section id="services" class="services-section">
             <img src="efeggg.png" alt="Services Background" class="services-bg">
-            <div class="services-content">
+            <div class="section-content services-content">
                 <h2>Our Services</h2>
                 <p>At PoligonOwl, we offer a wide range of graphic design services to meet your needs:</p>
                 <ul>
@@ -47,14 +47,18 @@
         </section>
 
         <section id="portfolio" class="portfolio-section">
-            <h2>Portfolio</h2>
-            <p>Check out our work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
+            <div class="section-content">
+                <h2>Portfolio</h2>
+                <p>Check out our work on <a href="https://www.artstation.com/sneit" target="_blank">ArtStation</a>.</p>
+            </div>
         </section>
 
         <section id="contact" class="contact-section">
-            <h2>Contact Us</h2>
-            <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
-            <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
+            <div class="section-content">
+                <h2>Contact Us</h2>
+                <p>Email: <a href="mailto:sneit95@hotmail.gr">sneit95@hotmail.gr</a></p>
+                <p>Instagram: <a href="https://www.instagram.com/sneit_art" target="_blank">@sneit_art</a></p>
+            </div>
         </section>
     </main>
 
